@@ -54,8 +54,9 @@ OPT_DISABLE_Z80         = @OPT_DISABLE_Z80@
 OPT_DISABLE_Z180        = @OPT_DISABLE_Z180@
 OPT_DISABLE_R2K         = @OPT_DISABLE_R2K@
 OPT_DISABLE_R3KA        = @OPT_DISABLE_R3KA@
-OPT_DISABLE_TLCS90      = @OPT_DISABLE_TLCS90@
 OPT_DISABLE_GBZ80       = @OPT_DISABLE_GBZ80@
+OPT_DISABLE_TLCS90      = @OPT_DISABLE_TLCS90@
+OPT_DISABLE_Z80N        = @OPT_DISABLE_Z80N@
 OPT_DISABLE_STM8        = @OPT_DISABLE_STM8@
 OPT_DISABLE_PDK13       = @OPT_DISABLE_PDK13@
 OPT_DISABLE_PDK14       = @OPT_DISABLE_PDK14@
