@@ -88,6 +88,9 @@
 /* Define to 1 if you have the <treedec/combinations.hpp> header file. */
 #undef HAVE_TREEDEC_COMBINATIONS_HPP
 
+/* Define to 1 if you have the <uchar.h> header file. */
+#undef HAVE_UCHAR_H
+
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
@@ -186,6 +189,9 @@
 
 /* XXX */
 #undef OPT_DISABLE_Z80
+
+/* XXX */
+#undef OPT_DISABLE_Z80N
 
 /* XXX */
 #undef OPT_ENABLE_DOC
